name:                RETE
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tomberek/RETE#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Bereknyei
maintainer:          tomberek@gmail.com
copyright:           Thomas Bereknyei 2016
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,Derive
  build-depends:       base >= 4.7 && < 5
                       ,template-haskell
                       ,compdata
                       ,ho-rewriting
                       ,containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomberek/RETE
